# registry_ticket_manager

./: Cargo.toml
registry_ticket_manager_proc_macro/: Cargo.toml
registry_ticket_manager_proc_macro/src/: lib.rs
src/: iter.rs  lib.rs
